Fix video display for mobile
On mobile it was too wide and splling out of it's container. This will
make it small when we're in mobile view.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -71,6 +71,13 @@ header {
     padding:2%;
     margin-bottom:20px;
   }
+
+  .video {
+    @include media-query($on-palm) {
+      width:315px;
+      height:177px;
+    }
+  }
 }
 
 .sidebar {
